--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "css": "^3.0.0",
-    "images": "^3.0.2"
+    "images": "^3.0.2",
+    "yeoman-generator": "^4.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/runtime": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "ttys": "^0.0.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   }
