--- a/week19/servers/Dockerfile
+++ b/week19/servers/Dockerfile
@@ -1,8 +1,11 @@
 FROM node:alpine
-ADD publish-server /home/publish-server
-ADD web-server /home/web-server
-ADD start.sh /home/
+ADD publish-server /home/publish-server/
+ADD web-server /home/web-server/
 RUN npm config set registry https://registry.npm.taobao.org && \
-  npm install -g pm2
+  npm install -g pm2 && \
+  cd /home/publish-server && npm install && \
+  cd /home/web-server && npm install 
+ADD start.sh /home/
 EXPOSE 3000 3010
-# CMD ["sh", "/home/start.sh"]
+WORKDIR /home
+CMD ["sh", "start.sh"]
