--- a/week19/demo/package.json
+++ b/week19/demo/package.json
@@ -15,17 +15,20 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/register": "^7.10.5",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
-    "babel-plugin-istanbul": "^6.0.0",
+    "archiver": "^5.0.0",
     "babel-loader": "^8.1.0",
-    "html-webpack-plugin": "^4.3.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "css": "^3.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "minimist": "^1.2.5",
     "mocha": "^8.1.1",
     "nyc": "^15.1.0",
-    "minimist": "^1.2.5",
-    "archiver": "^5.0.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "progress-bar-webpack-plugin": "^2.1.0"
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "core-js": "3"
   }
 }
